--- a/Exercício_PA.ipynb
+++ b/Exercício_PA.ipynb
@@ -295,9 +295,61 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "contas_e_saldos = {\n",
+        "    122345: 1000.0,\n",
+        "    567890: 500.0,\n",
+        "}\n",
+        "\n",
+        "tentativas = 0\n",
+        "\n",
+        "while tentativas < 3:\n",
+        "    codigo_conta = int(input(\"Digite o código da conta: \"))\n",
+        "    senha = input(\"Digite a senha: \")\n",
+        "\n",
+        "    if codigo_conta in contas_e_saldos and contas_e_saldos[codigo_conta] == senha:\n",
+        "        print(\"Acesso autorizado. Bem-vindo!\")\n",
+        "\n",
+        "        while True:\n",
+        "            print(\"\\nEscolha uma operação:\")\n",
+        "            print(\"1. Saque\")\n",
+        "            print(\"2. Depósito\")\n",
+        "            print(\"3. Ver saldo\")\n",
+        "            print(\"4. Sair\")\n",
+        "            escolha = int(input(\"Digite o número da operação desejada: \"))\n",
+        "\n",
+        "            if escolha == 1:\n",
+        "                valor_saque = float(input(\"Digite o valor a sacar: \"))\n",
+        "                if valor_saque > contas_e_saldos[codigo_conta]:\n",
+        "                    print(\"Saldo insuficiente. Operação cancelada.\")\n",
+        "                else:\n",
+        "                    contas_e_saldos[codigo_conta] -= valor_saque\n",
+        "                    print(f\"Saque de {valor_saque} realizado. Saldo atual: {contas_e_saldos[codigo_conta]}\")\n",
+        "\n",
+        "            elif escolha == 2:\n",
+        "                valor_deposito = float(input(\"Digite o valor a depositar: \"))\n",
+        "                contas_e_saldos[codigo_conta] += valor_deposito\n",
+        "                print(f\"Depósito de {valor_deposito} realizado. Saldo atual: {contas_e_saldos[codigo_conta]}\")\n",
+        "\n",
+        "            elif escolha == 3:\n",
+        "                print(f\"Saldo da conta: {contas_e_saldos[codigo_conta]}\")\n",
+        "\n",
+        "            elif escolha == 4:\n",
+        "                print(\"Operação encerrada. Obrigado!\")\n",
+        "                break\n",
+        "\n",
+        "            else:\n",
+        "                print(\"Opção inválida. Por favor, escolha uma operação válida.\")\n",
+        "\n",
+        "    else:\n",
+        "        print(\"Código da conta ou senha incorretos. Tente novamente.\")\n",
+        "        tentativas += 1\n",
+        "\n",
+        "if tentativas == 3:\n",
+        "    print(\"Você excedeu o número máximo de tentativas. A conta foi cancelada.\")"
+      ],
       "metadata": {
-        "id": "qOQJMLkSTi6h"
+        "id": "QtdZHcTQh1Ft"
       },
       "execution_count": null,
       "outputs": []
